--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -13,6 +13,8 @@ dist-ssr
 *.local
 
 # Editor directories and files
+
+
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,3 +24,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# .gitignore
+.env
